page_created_and_got_response_from_api

--- a/Meal_DB/mealDb.html
+++ b/Meal_DB/mealDb.html
@@ -7,6 +7,14 @@
         <div id = "heading">
             <h1>Meal Recipes</h1>
         </div>
+        <div id = "takeInput">
+            <label for = "giveName">Type the first letter of the meal recipe you want to see</label>
+            <input type = "text" id = "giveName" name = "giveName">
+            <button id = "submit">Submit</button>
+        </div>
+        <div id = "display">
+
+        </div>
         <script type = "text/javascript" src = "mealDb.js"></script>
     </body>
 </html>
