--- a/Meal_DB/mealDb.html
+++ b/Meal_DB/mealDb.html
@@ -13,6 +13,12 @@
             <button id = "submit">Submit</button>
         </div>
         <div id = "display">
+            <select id = "dropDown">
+
+            </select>
+        </div>
+        <div id = "container">
+
         </div>
         <script type = "text/javascript" src = "mealDb.js"></script>
     </body>
